# zero-flax

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  COMPLIANCE.md  FLAX_MULTI_ZERO_PLAN.md  FLAX_TODO.md  README.md  REFACTOR_PLAN.md  SEMANTIC_PLAN.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: check_compiler_tests.py  check_compliance.py  check_deps.py  check_parity_tests.py  verify_parity.py
src/zero_flax/: __init__.py  core.py
src/zero_flax/jax/: __init__.py
src/zero_flax/jax/nn/: __init__.py
src/zero_flax/jax/nn/initializers/: __init__.py
src/zero_flax/nnx/: __init__.py  containers.py  initializers.py  layers.py  linear.py  missing.py  module.py  normalization.py  state.py  stochastic.py
src/zero_flax/optax/: __init__.py
src/zero_flax/optax/losses/: __init__.py
src/zero_flax/optax/schedules/: __init__.py
tests/: conftest.py  test_all_others.py  test_coverage.py  test_coverage_all.py  test_e2e.py  test_extra_coverage.py  test_flax.py  test_full_coverage.py  test_initializers.py  test_layers.py  test_linear_missing.py  test_linear_stochastic.py  test_module_coverage.py  test_multihead.py  test_nnx_state.py  test_optax.py  test_parity_flax.py
