[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "zero-flax"
version = "0.8.5"
description = "Zero-dependency pure Python implementation of the Flax NNX API surface."
authors = [{ name = "Samuel Marks" }]
requires-python = ">=3.9"
dynamic = ["dependencies"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]
